RESOLVED FIXED200982
[GStreamer] Clang warns about mismatched type tag in declarations for ImageOrientation
https://bugs.webkit.org/show_bug.cgi?id=200982
Summary [GStreamer] Clang warns about mismatched type tag in declarations for ImageOr...
Adrian Perez
Reported 2019-08-21 08:57:41 PDT
In file included from ../Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:89: ../Source/WebCore/platform/graphics/gstreamer/VideoTextureCopierGStreamer.h:33:1: warning: class 'ImageOrientation' was previously declared as a struct; this is valid, but may result in linker errors under the Microsoft C++ ABI [-Wmismatched-tags] class ImageOrientation; ^ ../Source/WebCore/platform/graphics/ImageOrientation.h:34:8: note: previous use is here struct ImageOrientation { ^ ../Source/WebCore/platform/graphics/gstreamer/VideoTextureCopierGStreamer.h:33:1: note: did you mean struct here? class ImageOrientation; ^~~~~ struct 1 warning generated.
Attachments
Patch (1.44 KB, patch)
2019-08-21 09:06 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2019-08-21 09:06:07 PDT
WebKit Commit Bot
Comment 2 2019-08-21 10:08:54 PDT
Comment on attachment 376889 [details] Patch Clearing flags on attachment: 376889 Committed r248946: <https://trac.webkit.org/changeset/248946>
WebKit Commit Bot
Comment 3 2019-08-21 10:08:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-08-21 10:09:16 PDT
Note You need to log in before you can comment on or make changes to this bug.