[GStreamer] Clang warns about mismatched type tag in declarations for ImageOrientation https://bugs.webkit.org/show_bug.cgi?id=200982

Reviewed by Carlos Alberto Lopez Perez.

No new tests needed.

* platform/graphics/gstreamer/VideoTextureCopierGStreamer.h: Change
type tag in the forward declaration to "struct", hence matching the
actual type definition.


Canonical link: https://commits.webkit.org/214693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248946 268f45cc-cd09-0410-ab3c-d52691b4dbfc